Fix svg image for SUVs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="suv-box">
         <div class="suv-image">
-          <img src="./images/icon-luxury.svg" alt="SUV icon" />
+          <img src="./images/icon-suvs.svg" alt="SUV icon" />
         </div>
         <p>SUVs</p>
         <p>
